6821693: 64-bit TaskQueue capacity still too small 6821507: Alignment problem in GC taskqueue

Reviewed-by: tonyp, apetrusenko